# CinCustomLib

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  readme.md  toolchain.cmake
include/CinCustomLib/: cin_custom.h  cin_custom.hpp
src/: cin_custom.cpp  cin_custom.tpp
test/: test_inputtypes_correct.cpp  test_inputtypes_incorrect.cpp  test_main.cpp
